--- a/sass/components/general/footer/_footer-contacs.scss
+++ b/sass/components/general/footer/_footer-contacs.scss
@@ -1,7 +1,7 @@
 .adress {
   font-family: $fontRoboto;
   font-style: normal;
-  font-size: $size-14;
+  font-size: 14;
   line-height: 1.714;
   letter-spacing: 0.03em;
   color: $whiteColor;
