--- a/sass/components/general/footer/_footer-base.scss
+++ b/sass/components/general/footer/_footer-base.scss
@@ -19,6 +19,8 @@
 }
 
 .footer__first-second-part {
+  margin-bottom: 60px;
+
   @media screen and (min-width: 768px) and (max-width: 1199px) {
     display: flex;
     justify-content: space-around;
@@ -32,14 +34,14 @@
 .footer__first-part {
   margin-bottom: 60px;
 
+  @media screen and (min-width: 768px) {
+    margin-bottom: 0px;
+  }
+
   @media screen and (min-width: 1200px) {
     margin-right: 70px;
     margin-bottom: 0;
   }
-}
-
-.footer__second-part {
-  margin-bottom: 60px;
 }
 
 .logo--footer-style {
