--- a/sass/components/general/footer/_footer_social.scss
+++ b/sass/components/general/footer/_footer_social.scss
@@ -2,8 +2,8 @@
   margin-bottom: 20px;
   font-family: $fontRoboto;
   font-style: normal;
-  font-weight: $fontBold;
-  font-size: $size-14;
+  font-weight: 700;
+  font-size: 14;
   line-height: 1.14;
   letter-spacing: 0.03em;
   text-transform: uppercase;
@@ -12,7 +12,6 @@
 
 .footer__socials-list {
   display: flex;
-  // justify-content: flex-start;
   justify-content: center;
 }
 
