--- a/sass/components/general/header/_header-nav.scss
+++ b/sass/components/general/header/_header-nav.scss
@@ -83,14 +83,19 @@
   transition: transform 250ms ease-in-out;
   overflow-y: scroll;
 
-  .container {
+  .js-menu-container {
     position: relative;
-    padding-top: 48px;
-    padding-bottom: 48px;
+  }
+
+  .container {
+    // padding-top: 48px;
+    // padding-bottom: 48px;
+    height: 100%;
+    width: 100vw;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    height: 100%;
+    padding: 48px 40px;
   }
 
   .mobile-button__closed {
@@ -157,24 +162,30 @@
 
 .mobile-social {
   display: flex;
-}
 
-.mobile-social__item:nth-child(n + 2)::before {
-  content: "";
-  display: inline-flex;
-  align-items: center;
-  width: 1px;
-  height: 22px;
-  padding-top: 8px;
-  margin-right: 6px;
-  background-color: $modalInputBorderColor;
-}
+  .mobile-social__link {
+    padding-right: 10px;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 1.222;
+    letter-spacing: 0.02em;
+    color: $activeColor;
+  }
 
-.mobile-social__link {
-  padding-right: 10px;
-  font-weight: 500;
-  font-size: 18px;
-  line-height: 1.222;
-  letter-spacing: 0.02em;
-  color: $activeColor;
+  @media screen and (max-width: 480px) {
+    flex-direction: column;
+  }
+
+  @media screen and (min-width: 480px) {
+    .mobile-social__item:nth-child(n + 2)::before {
+      content: "";
+      display: inline-flex;
+      align-items: center;
+      width: 1px;
+      height: 22px;
+      padding-top: 8px;
+      margin-right: 6px;
+      background-color: $modalInputBorderColor;
+    }
+  }
 }
