--- a/sass/components/portfolio/_cards.scss
+++ b/sass/components/portfolio/_cards.scss
@@ -5,6 +5,7 @@
   @media screen and (min-width: 768px) {
     display: flex;
     flex-wrap: wrap;
+    align-items: flex-end;
     margin-left: -30px;
   }
 }
