--- a/sass/utils/_common.scss
+++ b/sass/utils/_common.scss
@@ -37,18 +37,17 @@ img {
   margin-right: auto;
   padding-left: 15px;
   padding-right: 15px;
-  min-width: 320px;
 
   @media screen and (min-width: 480px) {
-    max-width: 480px;
+    width: 480px;
   }
 
   @media screen and (min-width: 768px) {
-    max-width: 768px;
+    width: 768px;
   }
 
   @media screen and (min-width: 1200px) {
-    max-width: 1200px;
+    width: 1200px;
   }
 }
 
