--- a/sass/components/studio/_wedo.scss
+++ b/sass/components/studio/_wedo.scss
@@ -24,8 +24,8 @@
   @include flexCenterCenter;
   color: $whiteColor;
   background-color: $wedoBacgroundColor;
-  font-weight: $fontBold;
-  font-size: $size-14;
+  font-weight: 700;
+  font-size: 14px;
   line-height: 1.15;
   text-transform: uppercase;
 }
