--- a/css/main.css
+++ b/css/main.css
@@ -442,7 +442,7 @@ img {
 .adress {
   font-family: "Roboto", sans-serif;
   font-style: normal;
-  font-size: 14;
+  font-size: 14px;
   line-height: 1.714;
   letter-spacing: 0.03em;
   color: #ffffff;
@@ -570,7 +570,7 @@ img {
   font-family: "Roboto", sans-serif;
   font-style: normal;
   font-weight: 700;
-  font-size: 14;
+  font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.03em;
   text-transform: uppercase;
@@ -743,7 +743,7 @@ img {
   margin-bottom: 10px;
   text-align: center;
   font-weight: 700;
-  font-size: 14;
+  font-size: 14px;
   line-height: 1.143;
   letter-spacing: 0.03em;
   text-transform: uppercase;
@@ -756,7 +756,7 @@ img {
 }
 
 .principles__text {
-  font-size: 14;
+  font-size: 14px;
   line-height: 1.714;
   letter-spacing: 0.03em;
   color: #757575;
@@ -817,7 +817,7 @@ img {
   margin-bottom: 30px;
   background-color: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-  border-radius: 0px 0px 4px 4px;
+  border-radius: 0 0 4px 4px;
 }
 
 @media screen and (min-width: 768px) {
@@ -841,7 +841,7 @@ img {
 .team__employee {
   margin-bottom: 10px;
   font-weight: 500;
-  font-size: 16;
+  font-size: 16px;
   line-height: 1.188;
   text-align: center;
   letter-spacing: 0.03em;
@@ -849,7 +849,7 @@ img {
 
 .team__position {
   margin-bottom: 16px;
-  font-size: 16;
+  font-size: 16px;
   line-height: 1.188;
   text-align: center;
   letter-spacing: 0.03em;
@@ -1191,7 +1191,7 @@ img {
   border-color: #2196f3;
   color: #ffffff;
   background-color: #2196f3;
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+  box-shadow: 0 3px 1px rgba(0, 0, 0, 0.1), 0 1px 2px rgba(0, 0, 0, 0.08), 0 2px 2px rgba(0, 0, 0, 0.12);
   border-radius: 4px;
 }
 
@@ -1239,7 +1239,7 @@ img {
 .set__link:hover, .set__link:focus,
 .set__link:hover .set__overlay-text,
 .set__link:focus .set__overlay-text {
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.12), 0 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
   transform: translateY(0);
 }
 
@@ -1253,7 +1253,7 @@ img {
   top: 0;
   bottom: 0;
   padding: 63px 24px;
-  font-size: 18px;
+  font-size: 18;
   line-height: 1.56;
   color: #ffffff;
   background-color: rgba(33, 150, 243, 0.9);
