--- a/sass/components/general/footer/_footer_social.scss
+++ b/sass/components/general/footer/_footer_social.scss
@@ -3,7 +3,7 @@
   font-family: $fontRoboto;
   font-style: normal;
   font-weight: 700;
-  font-size: 14;
+  font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.03em;
   text-transform: uppercase;
