--- a/sass/components/portfolio/_cards.scss
+++ b/sass/components/portfolio/_cards.scss
@@ -35,19 +35,11 @@
   &:focus,
   &:hover .set__overlay-text,
   &:focus .set__overlay-text {
-    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.12), 0 4px 4px rgba(0, 0, 0, 0.06),
       1px 4px 6px rgba(0, 0, 0, 0.16);
     transform: translateY(0);
   }
 }
-
-// .set__item {
-//   @media screen and (min-width: 1200px) {
-//     &:nth-last-child(-n + 3) {
-//       margin-bottom: 0;
-//     }
-//   }
-// }
 
 .set__thumb {
   position: relative;
@@ -59,7 +51,7 @@
   top: 0;
   bottom: 0;
   padding: 63px 24px;
-  font-size: $size-18;
+  font-size: 18;
   line-height: 1.56;
   color: $whiteColor;
   background-color: $portfolioOverlayBackgroundColor;
@@ -69,14 +61,14 @@
 .set__card {
   &-title {
     margin-bottom: 4px;
-    font-weight: $fontBold;
-    font-size: $size-18;
+    font-weight: 700;
+    font-size: 18px;
     line-height: 2;
     letter-spacing: 0.06em;
   }
 
   &-text {
-    font-size: $size-16;
+    font-size: 16px;
     line-height: 1.875;
     letter-spacing: 0.03em;
     color: $secondaryTextColor;
