--- a/sass/components/portfolio/_filter.scss
+++ b/sass/components/portfolio/_filter.scss
@@ -3,8 +3,7 @@
   flex-wrap: wrap;
   justify-content: start;
   margin-bottom: 25px;
-  // justify-content: center;
-  // margin-bottom: 50px;
+
   @media screen and (min-width: 768px) {
     justify-content: center;
   }
@@ -13,9 +12,6 @@
 .filters__item {
   margin-right: 8px;
   margin-bottom: 15px;
-  // &:not(:last-child) {
-  //   margin-right: 8px;
-  // }
 }
 
 .filters__btn {
@@ -41,8 +37,8 @@
     border-color: $activeColor;
     color: $whiteColor;
     background-color: $activeColor;
-    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
-      0px 2px 2px rgba(0, 0, 0, 0.12);
+    box-shadow: 0 3px 1px rgba(0, 0, 0, 0.1), 0 1px 2px rgba(0, 0, 0, 0.08),
+      0 2px 2px rgba(0, 0, 0, 0.12);
     border-radius: 4px;
   }
 }
