--- a/sass/components/studio/_modal.scss
+++ b/sass/components/studio/_modal.scss
@@ -13,13 +13,11 @@
 }
 
 .modal {
-  // width: 528px;
-  // height: 581px;
   width: 450px;
   height: 609px;
   background: $whiteColor;
   box-shadow: $modalBoxShadow;
-  border-radius: $borderRadius-4;
+  border-radius: 4px;
 
   position: absolute;
   top: 50%;
@@ -68,8 +66,8 @@
 .modal__title {
   margin-bottom: 12px;
   font-style: normal;
-  font-weight: $fontBold;
-  font-size: $size-20;
+  font-weight: 700;
+  font-size: 20px;
   line-height: 1.15;
   text-align: center;
 }
@@ -89,9 +87,9 @@
 .modal__textarea {
   resize: none;
   height: 120px;
-  font-size: $size-14;
+  font-size: 14px;
   line-height: 1.33;
-  border-radius: $borderRadius-4;
+  border-radius: 4px;
   padding: 12px;
   @include border($textAreaBorderColor);
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -103,7 +101,7 @@
 
 .modal__text {
   margin-bottom: 4px;
-  font-size: $size-12;
+  font-size: 12px;
   line-height: 1.17;
   letter-spacing: 0.01em;
   color: $secondaryTextColor;
@@ -113,7 +111,7 @@
   padding-left: 42px;
   padding-top: 11px;
   padding-bottom: 11px;
-  border-radius: $borderRadius-4;
+  border-radius: 4px;
   @include border($modalInputBorderColor);
   cursor: pointer;
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -160,7 +158,7 @@
   width: 15px;
   height: 15px;
   border: 2px solid $blackColor;
-  border-radius: $borderRadius-2;
+  border-radius: 2px;
   background-color: $whiteColor;
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -176,7 +174,7 @@
 .modal__checkbox-text {
   display: inline-block;
   margin-left: 32px;
-  font-size: $size-14;
+  font-size: 14px;
   color: $secondaryTextColor;
 }
 
@@ -191,11 +189,11 @@
   margin-right: auto;
   min-width: 200px;
   padding: 10px 55px;
-  border-radius: $borderRadius-4;
+  border-radius: 4px;
   border-color: transparent;
   font-family: $fontRoboto;
-  font-weight: $fontBold;
-  font-size: $size-16;
+  font-weight: 700;
+  font-size: 16px;
   line-height: 1.87;
   letter-spacing: 0.06em;
   color: $whiteColor;
