--- a/sass/components/studio/_principles.scss
+++ b/sass/components/studio/_principles.scss
@@ -41,7 +41,7 @@
   margin-bottom: 10px;
   text-align: center;
   font-weight: 700;
-  font-size: 14;
+  font-size: 14px;
   line-height: 1.143;
   letter-spacing: 0.03em;
   text-transform: uppercase;
@@ -52,7 +52,7 @@
 }
 
 .principles__text {
-  font-size: 14;
+  font-size: 14px;
   line-height: 1.714;
   letter-spacing: 0.03em;
   color: $secondaryTextColor;
